rf card anim, fix ios header blur, fix base layout on mobile

--- a/city-furshet.ru/css/_base.css
+++ b/city-furshet.ru/css/_base.css
@@ -68,7 +68,7 @@
   cursor: pointer;
 }
 
-@media (min-width: 321px) {
+@media (min-width: 500px) {
   #block_1-container-logo {
     margin-bottom: 3rem;
   }
