--- a/city-furshet.ru/css/header/header_mobile.css
+++ b/city-furshet.ru/css/header/header_mobile.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   background-color: rgba(255, 255, 255, 0);
   backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
 }
 
 @media (min-width: 1279px) {
